feat(order): implement ready-made item optimization with OrderType enum and hybrid payment flow
- Introduced OrderType enum (READYMADE, PREPARED)
- Added dynamic order type detection during order creation
- Implemented instant READY flow for readymade items
- Added hybrid payment handling for cash and UPI
- Updated payment approval logic based on order type
- Ensured kitchen flow only for prepared items